# brainfuck

./: CMakeLists.txt  README.md
include/: brainfuck.h  linked_list.h  linked_list_aux.h  queue.h  stack.h  stripe.h  type_val.h
src/: brainfuck.c  linked_list.c  linked_list_aux.c  main.c  queue.c  stack.c  stripe.c
tests/: brainfuck_test.c  linked_list_aux_test.c  linked_list_test.c  queue_test.c  stack_test.c  stripe_test.c
